--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.1"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
